--- a/index.html
+++ b/index.html
@@ -5,18 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
-    <link rel="stylesheet" href="https://unpkg.com/vuetify/dist/vuetify.min.css">
 
-    <title>Vue + Typescript and RxJS Boilerplate Playground</title>
+    <title>Vue to React + Typescript and RxJS Boilerplate Playground</title>
 </head>
 <body>
     <div id="app"></div>
 
-    <script src="https://unpkg.com/vue/dist/vue.js"></script>
-    <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
-    <script src="https://unpkg.com/vue-i18n/dist/vue-i18n.js"></script>
-
-    <script src="https://unpkg.com/vuetify/dist/vuetify.js"></script>
+    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
 
     <script src="./dist/build.js"></script>
 </body>
