--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
 
-    <title>Vue to React + Typescript and RxJS Boilerplate Playground</title>
+    <title>React + Typescript and RxJS Boilerplate Playground</title>
 </head>
 <body>
     <div id="app"></div>
